--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "http-errors": "~1.6.3",
     "express": "~4.16.4",
+    "http-errors": "~1.6.3",
+    "mongoose": "^6.1.1",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
